--- a/apply.html
+++ b/apply.html
@@ -39,7 +39,7 @@
           <li class="nav-item">
             <a class="nav-link active" href="findus.html">Find Us</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item"7
             <a class="nav-link active" href="apply.html">Apply</a>
           </li>
 
@@ -53,39 +53,39 @@
      <table class="m-auto">
        <tr>
         <td class="paddingaplly"><label for="personnummer">Personnummer*</label></td><!--Lägger till en "for" för att det ska vara bra för skärmläsare vilket gör sidan mer tillgänglig. Detta gör även så när man klickar på texten förflyttas man till rutan-->
-        <td class="paddingaplly"><input size="18" type="text" placeholder="ÅÅÅÅMMDD-XXXX" name="personnummer" id="personnummer" required> </td>
+        <td class="paddingaplly"><input size="17" type="text" placeholder="ÅÅÅÅMMDD-XXXX" name="personnummer" id="personnummer" required> </td>
       </tr>
       <tr>
         <td class="paddingaplly"><label for="förnamn">Förnamn*</label></td>
-        <td class="paddingaplly"><input size="18" type="text" name="förnamn" id="förnamn" required> </td>
+        <td class="paddingaplly"><input size="17" type="text" name="förnamn" id="förnamn" required> </td>
       </tr>
       <tr>
         <td class="paddingaplly"><label for="efternamn">Efternamn*</label></td>
-        <td class="paddingaplly"><input size="18"  type="text" name="efternamn" id="efternamn" required> </td>
+        <td class="paddingaplly"><input size="17"  type="text" name="efternamn" id="efternamn" required> </td>
       </tr>
       <tr>
         <td class="paddingaplly"><label for="co">C/O</label></td>
-        <td class="paddingaplly"><input size="18" type="text" name="co" id="co"> </td>
+        <td class="paddingaplly"><input size="17" type="text" name="co" id="co"> </td>
       </tr>
       <tr>
         <td class="paddingaplly"><label for="adress">Adress*</label></td>
-        <td class="paddingaplly"><input size="18" type="text" name="adress" id="adress" required> </td>
+        <td class="paddingaplly"><input size="17" type="text" name="adress" id="adress" required> </td>
       </tr>
       <tr>
         <td class="paddingaplly"><label for="postnummer">Postnummer*</label></td>
-        <td class="paddingaplly"><input size="18" type="text" name="postnummer" id="postnummer" required> </td>
+        <td class="paddingaplly"><input size="17" type="text" name="postnummer" id="postnummer" required> </td>
       </tr>
       <tr>
         <td class="paddingaplly"><label for="ort">Ort*</label></td>
-        <td class="paddingaplly"><input size="18" type="text" name="ort" id="ort" required> </td>
+        <td class="paddingaplly"><input size="17" type="text" name="ort" id="ort" required> </td>
       </tr>
       <tr>
         <td class="paddingaplly"><label for="telefon">Telefon</label></td>
-        <td class="paddingaplly"><input size="18" type="text" name="telefon" id="telefon"> </td>
+        <td class="paddingaplly"><input size="17" type="text" name="telefon" id="telefon"> </td>
       </tr>
       <tr>
         <td class="paddingaplly"><label for="epost">E-Post</label></td>
-        <td class="paddingaplly"><input size="18" type="text" name="epost" id="epost"> </td>
+        <td class="paddingaplly"><input size="17" type="text" name="epost" id="epost"> </td>
       </tr>
       <tr>
         <td class="paddingaplly"><label for="hurkontakt">Hur vill du bli kontaktat?*</label></td><!--Blev fel i valideringen med W3 därför tog jag bort required, detta betyder att om inget annat vals blir det telefon--> 
