--- a/apply.html
+++ b/apply.html
@@ -39,7 +39,7 @@
           <li class="nav-item">
             <a class="nav-link active" href="findus.html">Find Us</a>
           </li>
-          <li class="nav-item"7
+          <li class="nav-item">
             <a class="nav-link active" href="apply.html">Apply</a>
           </li>
 
